[gd_scene format=3 uid="uid://b8s66cm7s8uk4"]

[ext_resource type="Script" uid="uid://tfyntrbnb43q" path="res://player_ricco.gd" id="1_4a7ct"]
[ext_resource type="Texture2D" uid="uid://b8gkcu6fpcyan" path="res://foto/personaggi/player-vip/image 43.png" id="2_4a7ct"]
[ext_resource type="Texture2D" uid="uid://5q3ceoqt1cvt" path="res://foto/personaggi/player-vip/image 32.png" id="3_ma1hb"]
[ext_resource type="Texture2D" uid="uid://bf8otumnux6dy" path="res://foto/personaggi/player-vip/image 33.png" id="4_73ctr"]

[sub_resource type="SpriteFrames" id="SpriteFrames_4a7ct"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_4a7ct")
}],
"loop": true,
"name": &"idle_ricchione",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_ma1hb")
}, {
"duration": 1.0,
"texture": ExtResource("2_4a7ct")
}, {
"duration": 1.0,
"texture": ExtResource("4_73ctr")
}],
"loop": true,
"name": &"walk_uomo_ricco",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4a7ct"]
size = Vector2(140.5, 275)

[node name="UomoRicco" type="CharacterBody2D" unique_id=680131962]
script = ExtResource("1_4a7ct")

[node name="AnimUomoRicco" type="AnimatedSprite2D" parent="." unique_id=1107607908]
position = Vector2(-1.3000001, 1.260751)
scale = Vector2(0.3906475, 0.4046585)
sprite_frames = SubResource("SpriteFrames_4a7ct")
animation = &"idle_ricchione"

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1680507030]
position = Vector2(-3.25, 6.5)
shape = SubResource("RectangleShape2D_4a7ct")

[node name="NomeUomoRicco" type="Label" parent="." unique_id=1171785547]
offset_left = 599.0
offset_top = 401.0
offset_right = 776.0
offset_bottom = 467.0
horizontal_alignment = 1
vertical_alignment = 1
